# youbot_tactical_level

./: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  HokuyoLaser.cpp~  LICENSE  README.md  RosHelper.cpp  RosHelper.cpp~  RosHelpers.cpp~  launch.xml~  main.cpp  package.xml  package.xml~  run.sh~
Behaviours/: MoveSpin.cpp  MoveSpin.cpp~  MoveStop.cpp  MoveStop.cpp~  MoveWithLaser.cpp  MoveWithLaser.cpp~  MoveZigZag.cpp  MoveZigZag.cpp~
_Misc/: launch.xml
data/lua/: test.lua
include/: Behaviours.h  Behaviours.h~  HokuyoLaser.h  HokuyoLaser.h~  IBehaviour.h~  MoveWithLaser.h~  RosHelper (ubuntu's conflicted copy 2014-11-04).h~  RosHelper.h  RosHelper.h~  RosHelpers.h~  image-publish.h  includes.h  includes.h~
include/udp/: Udp.h
include/urg/: Connection_information.h~  Urg_driver.h
launch/: youbot_tactical_level.launch
udp/: Udp.cpp
urg/: HokuyoLaser.cpp  HokuyoLaser.cpp~
